# meowlabs-clipper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  processor.py
deploy/nginx/: clipper.meowlabs.id.conf
deploy/systemd/: clipper.service
