[project]
name = "meowlabs-clipper"
version = "0.1.0"
description = "Transcript-first web video clipper for Meow Labs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "imageio-ffmpeg>=0.5.1",
  "yt-dlp>=2025.6.9",
]

